# Motion-Planning-for-Mobile-Robots

./: README.md
MP_answer/Project/src/src/: 大作业说明.md
MP_answer/Project/src/src/read_only/map_server/map_generator/src/: random_complex_generator.cpp
MP_answer/Project/src/src/read_only/quadrotor_simulator/so3_control/src/: so3_control_nodelet.cpp
MP_answer/Project/src/src/trajectory_generator/: CMakeLists.txt
MP_answer/Project/src/src/trajectory_generator/include/: Astar_searcher.h  trajectory_generator_waypoint.h
MP_answer/Project/src/src/trajectory_generator/launch/: demo.launch
MP_answer/Project/src/src/trajectory_generator/launch/rviz_config/: demo.rviz
MP_answer/Project/src/src/trajectory_generator/src/: Astar_searcher.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
MP_answer/hw1/: readme.md
MP_answer/hw2/ROS/: readme.md
MP_answer/hw2/ROS/src/grid_path_searcher/: CMakeLists.txt
MP_answer/hw2/ROS/src/grid_path_searcher/src/: Astar_searcher.cpp  demo_node.cpp
MP_answer/hw2/matlab/: README.txt
MP_answer/hw2/matlab/code/: A_star_search.m  main.m  obstacle_map.m
MP_answer/hw2/matlab/code/A_star/: distance.m
MP_answer/hw3/: readme.md
MP_answer/hw3/Matlab作业/: RRT.m
MP_answer/hw3/Ros作业/grid_path_searcher/: CMakeLists.txt
MP_answer/hw3/Ros作业/grid_path_searcher/src/: demo_node.cpp
MP_answer/hw4/: readme.md
MP_answer/hw4/src/grid_path_searcher/: CMakeLists.txt
MP_answer/hw4/src/grid_path_searcher/src/: demo_node.cpp  hw_tool.cpp
MP_answer/hw5/matlab/: getAbeq.m  getCt.asv  getCt.m  getM.m  getQ.m  hw1_1.m  hw1_2.m
MP_answer/hw5/ros/src/waypoint_trajectory_generator/: CMakeLists.txt
MP_answer/hw5/ros/src/waypoint_trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
MP_answer/hw6/matlab/: getAbeq.m  getAbieq.m  getQM.m  hw6.m  untitled.m
MP_answer/hw7/: real_time_dynamic_programming.py
MP_answer/hw8/L8Homework/L8Homework/: mpc_example_student.rar  uni_student.rar
MP_answer/hw8/L8Homework/L8Homework/mpc_example_student/mpc_examples/: home_work.m  linear_mpc.m
MP_answer/hw8/L8Homework/L8Homework/uni_student/uni/pso/: pso_select.asv  pso_select.m  pso_test_obstacle.asv  pso_test_obstacle.m
